# tooling

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  defs.bzl
.github/workflows/: format.yml  integration_tests.yml  python_basics_test.yml  tests.yml
bazel/rules/rules_score/: BUILD  providers.bzl  rules_score.bzl
bazel/rules/rules_score/docs/: index.rst
bazel/rules/rules_score/private/: architectural_design.bzl  assumptions_of_use.bzl  component.bzl  component_requirements.bzl  dependability_analysis.bzl  dependable_element.bzl  feature_requirements.bzl  safety_analysis.bzl  sphinx_module.bzl  unit.bzl
bazel/rules/rules_score/src/: sphinx_html_merge.py  sphinx_wrapper.py
bazel/rules/rules_score/templates/: conf.template.py  seooc_index.template.rst
bazel/rules/rules_score/test/: BUILD  html_generation_test.bzl  score_module_providers_test.bzl  seooc_test.bzl  unit_component_test.bzl
bazel/rules/rules_score/test/fixtures/: mock_lib1.cc  mock_lib2.cc  mock_test.sh  test_component_main.cc  test_unit_test.cc
bazel/rules/rules_score/test/fixtures/module_a/: index.rst
bazel/rules/rules_score/test/fixtures/module_b/: index.rst
bazel/rules/rules_score/test/fixtures/module_c/: index.rst
bazel/rules/rules_score/test/fixtures/seooc_test/: architectural_design.rst  assumptions_of_use.rst  component_requirements.rst  dependability_analysis.rst  dfa.rst  dynamic_architecture.rst  feature_requirements.rst  static_architecture.rst
cli_helper/: MODULE.bazel  README.md  cli_helper.bzl
cli_helper/tool/: BUILD  cli_help.py
coverage/: BUILD  README.md  coverage.bzl  ferrocene_report.sh  ferrocene_report_wrapper.sh.tpl  llvm_profile_wrapper.sh
coverage/scripts/: normalize_symbol_report.py  parse_line_coverage.py
coverage/tests/: BUILD  ferrocene_report_help_test.sh  normalize_symbol_report_test.sh  parse_line_coverage_test.sh
coverage/tests/fixtures/: blanket_index.html  symbol_report.json
cr_checker/: MODULE.bazel  README.md  cr_checker.bzl  deps.bzl
cr_checker/resources/: config.json  templates.ini
cr_checker/tests/: BUILD  MODULE.bazel  requirements_lock.txt  test_cr_checker.py  test_shebang_handling.py
cr_checker/tool/: BUILD  cr_checker.py
dash/: BUILD  MODULE.bazel  README.md  dash.bzl
dash/tool/formatters/: BUILD  dash_format_converter.bzl  dash_format_converter.py
format_checker/: MODULE.bazel  README.md  macros.bzl
format_checker/tool/: rustfmt_with_policies.sh
pytest/: BUILD  MODULE.bazel  README.md  pytest.bzl  requirements.txt
pytest/integration_test/: BUILD  MODULE.bazel  int_test.py
pytest/tests/: BUILD
python_basics/: .bazelrc  BUILD  MODULE.bazel  README.md  defs.bzl  multitool.lock.json  pyproject.toml  requirements.in  requirements.txt
python_basics/integration_tests/: .bazelrc  MODULE.bazel
python_basics/integration_tests/simple-tests/: BUILD  pytest_ok.py  test_venv_ok.py
python_basics/integration_tests/venv-with-extra-requirements/: BUILD  requirements.txt  test_extra_requirements_ok.py
python_basics/private/: BUILD
python_basics/score_pytest/: BUILD  README.md  attribute_plugin.py  py_pytest.bzl  pytest.ini
python_basics/score_pytest/integration_test/: BUILD  MODULE.bazel
python_basics/score_venv/: README.md  py_pyvenv.bzl
python_basics/score_venv/integration_tests/: BUILD  MODULE.bazel  test_extra_requirements_ok.py  test_venv_ok.py
starpls/: MODULE.bazel  README.md  starpls.bzl
starpls/integration_tests/: .bazelrc  BUILD  MODULE.bazel  defs.bzl  starpls_test.py
tools/: BUILD  MODULE.bazel  README.md  actionlint.lock.json  ruff.lock.json  sample.sh  shellcheck.lock.json  yamlfmt.lock.json
